--- a/old_landing/index.html
+++ b/old_landing/index.html
@@ -8,7 +8,7 @@
     <link href="css/main.css" rel="stylesheet">
     <meta content="#151515" name="theme-color">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
-    <link href="/css/paw.svg" rel="shortcut icon" type="image/svg">
+    <link href="css/paw.svg" rel="shortcut icon" type="image/svg">
     <link href="http://lapastudio.xyz/css/paw.svg" rel="image_src"/>
     <meta content="Uncharted paths carry toward the future..." name="description"/>
     <meta content="LaPa Software" property="og:title"/>
@@ -36,9 +36,9 @@
 <div id="hostsListBox"></div>
 <div id="vk_community_messages"></div>
 
-<script src="/LaPa.min.js"></script>
+<script src="https://WebAppFramework.projects.ponomarevlad.ru/LaPa.min.js"></script>
 <script src="js/conf.js"></script>
-<script src="/lib/page.min.js"></script>
+<script src="https://WebAppFramework.projects.ponomarevlad.ru/lib/page.min.js"></script>
 <script src="js/paws.js"></script>
 <script src="//vk.com/js/api/openapi.js?127" type="text/javascript"></script>
 
