--- a/old_landing/index.html
+++ b/old_landing/index.html
@@ -9,20 +9,20 @@
     <meta content="#151515" name="theme-color">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <link href="css/paw.svg" rel="shortcut icon" type="image/svg">
-    <link href="http://lapastudio.xyz/css/paw.svg" rel="image_src"/>
+    <link href="https://LaPaSoftware.projects.ponomarevlad.ru/css/paw.svg" rel="image_src"/>
     <meta content="Uncharted paths carry toward the future..." name="description"/>
     <meta content="LaPa Software" property="og:title"/>
     <meta content="Uncharted paths carry toward the future..." property="og:description"/>
-    <meta content="http://lapastudio.xyz/css/paw.svg" property="og:image">
+    <meta content="https://LaPaSoftware.projects.ponomarevlad.ru/css/paw.svg" property="og:image">
     <meta content="website" property="og:type"/>
-    <meta content="http://lapastudio.xyz" property="og:url"/>
+    <meta content="https://LaPaSoftware.projects.ponomarevlad.ru" property="og:url"/>
     <meta content="LaPa Software" property="og:site_name"/>
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
             "@type": "Organization",
             "name": "LaPa Software",
-            "url": "http://lapastudio.xyz",
+            "url": "https://LaPaSoftware.projects.ponomarevlad.ru",
             "description": "Uncharted paths carry toward the future..."
         }
 
